feat(button): add tests